Adicionado a interface repositorio